--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-google-maps-loader": "^4.3.0",
